Money Manager 20.3.0
* JDK 14
* JavaFX 14
* Native packages build in POM